# InstanceFusion

./: CMakeLists.txt  FindOpenNI2.cmake  README.md
dataset/: data.txt  transform.py
elasticfusionpublic/: GUIlive.freiburg
elasticfusionpublic/Core/src/: CMakeLists.txt  Deformation.cpp  ElasticFusion.cpp  ElasticFusion.h  Ferns.cpp  Ferns.h  GPUTexture.cpp  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h
elasticfusionpublic/Core/src/Cuda/: cudafuncs.cu  cudafuncs.cuh  reduce.cu
elasticfusionpublic/Core/src/Shaders/: FeedbackBuffer.cpp  Vertex.cpp  combo_splat.frag  copy_unstable.geom  copy_unstable.vert  data.frag  data.geom  data.vert  draw_feedback.vert  draw_global_ID.frag  draw_global_ID.geom  draw_global_ID.vert  draw_global_surface.geom  draw_global_surface.vert  index_map.frag  index_map.vert  init_unstable.vert  instance_surfel_ids.vert  sample.geom  sample.vert  splat.vert  surfel_ids.frag  surfel_ids.geom  surfel_ids.vert  update.vert  vertex_feedback.geom  vertex_feedback.vert
elasticfusionpublic/Core/src/Utils/: DeformationGraph.cpp  DeformationGraph.h  GPUConfig.h  RGBDOdometry.cpp
elasticfusionpublic/GPUTest/src/: CMakeLists.txt
elasticfusionpublic/GUI/src/: MainController.cpp
elasticfusionpublic/GUI/src/Tools/: GUI.h
src/: main.cpp
src/Core/: InstanceFusion.cpp  InstanceFusion.h  InstanceFusionCuda.cu  InstanceFusionCuda.h  InstanceFusion_superpixel.cpp  InstanceTable.cpp
src/gui/: Gui.cpp  Gui.h  GuiCuda.cu  GuiCuda.h
src/map_interface/: ElasticFusionCuda.cu  ElasticFusionInterface.cpp  ElasticFusionInterface.h
src/utilities/: LogReader.h  PNGLogReader.cpp  PNGLogReader.h
